--- a/SqliteApp/app/src/main/res/layout/activity_main.xml
+++ b/SqliteApp/app/src/main/res/layout/activity_main.xml
@@ -12,80 +12,88 @@
         android:id="@+id/tv_firstname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="97dp"
+        android:layout_marginBottom="7dp"
+        android:layout_marginStart="16dp"
         android:text="FIRSTNAME"
-        app:layout_constraintEnd_toStartOf="@+id/et_firstname"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/et_lastname"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/et_firstname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="14dp"
+        android:layout_marginEnd="32dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Firstname"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_firstname"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/et_lastname"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/tv_lastname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="76dp"
         android:text="LASTNAME"
-        app:layout_constraintBottom_toTopOf="@+id/et_mark"
-        app:layout_constraintEnd_toStartOf="@+id/et_lastname" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_lastname"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="22dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Lastname"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_lastname"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/et_mark"
+        app:layout_constraintStart_toStartOf="@+id/et_firstname"
+        app:layout_constraintTop_toBottomOf="@+id/tv_lastname" />
 
     <TextView
         android:id="@+id/tv_mark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="57dp"
-        android:layout_marginStart="58dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="46dp"
         android:text="MARK"
-        app:layout_constraintBaseline_toBaselineOf="@+id/et_mark"
-        app:layout_constraintEnd_toStartOf="@+id/et_mark"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_firstname" />
 
     <EditText
         android:id="@+id/et_mark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="56dp"
+        android:layout_marginEnd="32dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Mark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.449" />
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/bt_addStudent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/bt_addStudent"
+        android:layout_width="132dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="83dp"
+        android:layout_marginStart="83dp"
+        android:text="ADD STUDENT"
+        app:layout_constraintBottom_toTopOf="@+id/bt_viewStudents"
+        app:layout_constraintEnd_toEndOf="@+id/et_mark"
+        app:layout_constraintStart_toEndOf="@+id/tv_mark" />
+
+    <Button
+        android:id="@+id/bt_viewStudents"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="133dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="133dp"
-        android:text="ADD STUDENT"
+        android:layout_marginBottom="118dp"
+        android:text="VIEW STUDENTS"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_mark"
-        app:layout_constraintTop_toBottomOf="@+id/tv_lastname"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="@+id/bt_addStudent" />
 
 </android.support.constraint.ConstraintLayout>
