--- a/SqliteApp/app/src/main/res/layout/activity_main.xml
+++ b/SqliteApp/app/src/main/res/layout/activity_main.xml
@@ -55,26 +55,24 @@
         android:id="@+id/tv_lastname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="62dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="76dp"
         android:text="LASTNAME"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_firstname"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_lastname"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:layout_marginBottom="69dp"
-        android:layout_marginTop="69dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Lastname"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/et_mark"
+        app:layout_constraintBottom_toTopOf="@+id/et_mark"
         app:layout_constraintStart_toStartOf="@+id/et_firstname"
-        app:layout_constraintTop_toBottomOf="@+id/et_id" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_lastname" />
 
     <TextView
         android:id="@+id/tv_mark"
@@ -90,7 +88,7 @@
         android:id="@+id/et_mark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="23dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Mark"
@@ -122,8 +120,18 @@
         android:id="@+id/bt_updateStudent"
         android:layout_width="156dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="93dp"
+        android:layout_marginBottom="17dp"
         android:text="UPDATE STUDENT"
+        app:layout_constraintBottom_toTopOf="@+id/bt_deleteStudent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/bt_deleteStudent"
+        android:layout_width="155dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
+        android:text="DELETE STUDENT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
