--- a/RecyclerViewProject/app/src/main/res/layout/activity_main.xml
+++ b/RecyclerViewProject/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,47 @@
         android:layout_height="match_parent"
         android:padding="4dp"
         android:scrollbars="vertical"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:color/darker_gray"
+        android:layout_marginBottom="100dp"/>
+
+    <EditText
+        android:id="@+id/edittext_insert"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="25dp"
+        android:hint="ins"
+        android:inputType="number"/>
+
+    <Button
+        android:id="@+id/button_insert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/edittext_insert"
+        android:layout_marginStart="74dp"
+        android:text="insert" />
+
+
+    <EditText
+        android:id="@+id/edittext_remove"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/edittext_insert"
+        android:layout_marginEnd="118dp"
+        android:hint="rem" />
+
+    <Button
+        android:id="@+id/button_remove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/edittext_insert"
+        android:layout_marginEnd="17dp"
+        android:text="remove"
+        android:inputType="number"/>
 
 </RelativeLayout>
