--- a/RecyclerViewProject/app/src/main/res/layout/example_item.xml
+++ b/RecyclerViewProject/app/src/main/res/layout/example_item.xml
@@ -41,6 +41,14 @@
             android:layout_toEndOf="@+id/imageView"
             android:layout_marginStart="8dp"/>
 
+        <ImageView
+            android:id="@+id/image_delete"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            app:srcCompat="@drawable/ic_delete" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
